# my-beancount-scripts

./: Cargo.toml  import.py
beancount-importer/: Cargo.toml  start.sh
beancount-importer/modules/imports/: __init__.py  alipay.py  citic.py  cmb.py  wechat.py
beancount-importer/scripts/: pddexport.js
beancount-importer/src/: files.rs  lib.rs  logger.rs  main.rs
beancount-importer/src/common/: account.rs
beancount-importer/src/importers/: wechat.rs
beancount-importer/test_datas/rust/: 微信支付账单(20240101-20240228).csv
beancount-importer/test_datas/去重/: CMB_6214--------3007_20240101_20240229.csv  alipay_record_20240309_211412.csv
beancount-importer/test_datas/微信/: 微信支付账单(20240101-20240228).csv
beancount-importer/test_datas/招商银行/: CMB_6214--------3007_20240101_20240229.csv
beancount-importer/test_datas/支付宝/: alipay_record_20240309_211412.csv
beancount-importer/test_datas/账单合并/: CMB_6214--------3007_20230101_20231104.csv  alipay_record_20231106_190251.csv
modules/: accounts.py
modules/imports/: alipay.py  citic.py  citic_credit.py  cmb.py  deduplicate.py  wechat.py
modules/imports_back/: abc_credit.py  ccb_credit.py
scripts/: pddexport.js
src/: files.rs  importers.rs  lib.rs  main.rs
src/importers/: citi.rs  wechat.rs
test_datas/中信银行/: 中信_交易明细_5999_20240101-20240229.xls
test_datas/去重/: CMB_6214--------3007_20240101_20240229.csv  alipay_record_20240309_211412.csv  中信_交易明细_5999_20240101-20240229.xls  微信支付账单(20240101-20240228).csv
test_datas/微信/: 微信支付账单(20240101-20240228).csv
test_datas/招商银行/: CMB_6214--------3007_20240101_20240229.csv
(+3 files in other folders)
