[package]
name = "beancount-importer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
beancount-core = { path = "../beancount-core" }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
csv = "1.1"
calamine = "0.29.0"
regex = "1.11.1"
anyhow = "1.0"
log = "0.4"
fern = "0.6"
chrono = "0.4.41"